--- a/style.css
+++ b/style.css
@@ -1,14 +1,9 @@
 img {
-    width:20%;
-    height:20%;
-}
+    margin-top: 1rem;
+    width:5rem;
+    height:5rem;
 
-.result {
-    display: table;
-}
-
-h1 {
-    margin-bottom: 4rem;
+    border-radius: 10px;
 }
 
 body {
@@ -18,6 +13,16 @@ body {
 h4 {
     background-color: #333;
     color: white;
+}
 
+.result {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+}
+
+.row {
+    background-color: wheat
 }
 
